--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,10 @@
 featured:
 - {name: 'Liu, L., Choi, G., & Mahadevan, L. Wallpaper group kirigami. Proceedings of the Royal Society A. 477, 20210161, 2021.', url: 'https://royalsocietypublishing.org/doi/full/10.1098/rspa.2021.0161#d1e5867'}
-- {name: 'Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Submitted, arXiv:2104.13399.', url: 'https://doi.org/10.1103/PhysRevResearch.4.033114'}
-- {name: 'Finkelstein, M., Liu, L., Levy Schlot, N., Kolumbus, Y., Parkes, D., Rosenschein, J., Keren, S. Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning. (To appear in December 2021.) ', url: 'https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf'}
+- {name: 'Liu, L., Choi, G., & Mahadevan, L. Quasicrystal kirigami. Physical Review Research, 4(3), 033114, 2022.', url: 'https://doi.org/10.1103/PhysRevResearch.4.033114'}
+- {name: 'Mira Finkelstein, Lucy Liu, Nitsan Levy Schlot, Yoav Kolumbus, David C. Parkes, Jeffrey S. Rosenshein, & Sarah Keren. Explainable Reinforcement Learning via Model Transforms. NeurIPS 2022. Submitted, arXiv:2209.12006.', url: 'https://arxiv.org/abs/2209.12006'}
+- {name: 'Choi, G., Liu, L., & Mahadevan, L. Explosive rigidity percolation in kirigami. Submitted, arXiv:2211.15073.', url: 'https://arxiv.org/abs/2211.15073'}
+
+# - {name: 'Finkelstein, M., Liu, L., Levy Schlot, N., Kolumbus, Y., Parkes, D., Rosenschein, J., Keren, S. Deep Reinforcement Learning Explanation via Model Transforms. NeurIPS Workshop on Deep Reinforcement Learning. (To appear in December 2021.) ', url: 'https://d95a4782-4ebd-4b0d-aa3a-24320cc2cc6d.filesusr.com/ugd/c1d2d0_5929426580784e77bd3e85f09b7aff29.pdf'}
 
 index:
 # - {name: 'Testing General Relativity with Present and Future Astrophysical Observations. Emanuele Berti (Mississippi U. and Lisbon, CENTRA), Enrico Barausse (Paris, Inst. Astrophys. and Paris U., VI-VII), Vitor Cardoso (Lisbon, IST and Perimeter Inst. Theor. Phys. and Lisbon, CENTRA), Leonardo Gualtieri (Rome U. and INFN, Rome), Paolo Pani (Rome U. and INFN, Rome and Lisbon, IST and Lisbon, CENTRA) et al.', url: '/publications/1501.07274.pdf'}
